2003-11-21 Ben Maurer  <bmaurer@users.sourceforge.net>

	* ObjectStateFormatter.cs: v2 file. In v1.x this will be
	internal as LosFormatter will eventually use it to save
	the view state.

2003-11-21  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* PersistChildrenAttribute.cs:
	* PersistenceModeAttribute.cs: implemented.

	* TODO: Removed file.
	* OutputCacheLocation.cs:
	* TemplateControlParser.cs:
	* HtmlInputFile.cs: class status based fixes.

2003-11-19  Jackson Harper <jackson@ximian.com>

	* Page.cs: Always set the cache expire time. Tell the response to
	cache itself for server side cached pages.
	
2003-11-19  Jackson Harper <jackson@ximian.com>

	* Control.cs: Remove ResolveBaseUrl. ResolveUrl does the same
	thing, some corner cases still need work though. Was this the
	shortest lived method in the history of mono?
	
2003-11-19  Jackson Harper <jackson@ximian.com>

	* Control.cs: New method for resolving urls that use ~/ to denote
	the applications base directory.
	
2003-11-19  Jackson Harper <jackson@ximian.com>

	* TemplateParser.cs: Fix typo in error message.
		
2003-11-19  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TemplateControlParser.cs: support @Reference. Fixes bug #49572. Thanks
	to Sanjay Gupta.

2003-11-19  Todd Berman  <tberman@gentoo.org>

	* KeyedList.cs:
	* KeyedListEnumerator.cs: New v2 implementations.

2003-11-17 Ben Maurer  <bmaurer@users.sourceforge.net>

	* StateManagedCollection.cs: Implement.

2003-11-13  Jackson Harper  <jackson@ximian.com>

	* Page.cs: Initial implementation of InitOutputCache.
	* TemplateParser.cs: Page OutputCache options
	
2003-11-09 Ben Maurer  <bmaurer@users.sourceforge.net>

	* HierarchicalDataSourceControl.cs: Implement.

2003-11-09 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XPathBinder.cs: Implemented.

2003-11-08 Ben Maurer  <bmaurer@users.sourceforge.net>

	* DataSourceView.cs:
	* IDataSource.cs:
	* ListSourceHelper.cs:
	* DataSourceControl.cs:
	* HierarchicalDataSourceView.cs: